--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <!-- Static Bottom Button -->
     <div class="fixed-bottom text-center mb-3">
         <a href="#_form"><button type="button" class="btn btn-lg btn-primary pulsing-button">
-            سجل الآن للحصول على درس تجريبي مجاني
+            الانضمام الان
         </button></a>
     </div>
 
